<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="@dimen/padding_lvl_5dp" >

    <TextView
        android:id="@+id/tv_section_dlg_rating_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/padding_lvl_5dp"
        android:text="@string/rating_dialog_message"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_bright" >

        <Button
            android:id="@+id/btn_section_dlg_rating_confirmyes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_weight="0.5"
            android:background="@drawable/bg_button_section_exit"
            android:text="@string/rating_dialog_confirm_yes"
            android:textColorLink="@android:color/black" />

        <Button
            android:id="@+id/btn_section_dlg_rating_confirmno"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="0.5"
            android:background="@drawable/bg_button_section_exit"
            android:text="@string/rating_dialog_confirm_no"
            android:textColorLink="@android:color/black" />

        <Button
            android:id="@+id/btn_section_dlg_rating_confirmnotnow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_weight="0.5"
            android:background="@drawable/bg_button_section_exit"
            android:text="@string/rating_dialog_confirm_notnow"
            android:textColorLink="@android:color/black" />

    </LinearLayout>

</LinearLayout>