<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#00000000" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="#00000000"
        android:padding="@dimen/margin_button_close_dialog" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/bg_dialog_login"
            android:gravity="center"
            android:orientation="vertical"
            android:layoutAnimation="@animator/dlg_anim_inright"
            android:padding="@dimen/margin_button_close_dialog" >



            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/image_contentdescription"
                android:src="@drawable/ic_dlg_logo" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/image_contentdescription"
                android:paddingTop="10dp"
                android:src="@drawable/line_dlg_separator" />

            <ScrollView
                android:id="@+id/sv_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:id="@+id/ll_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tv_dlg_account_forgot_pass_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/menu_list_item_padding_top"
                        android:background="@null"
                        android:padding="@dimen/menu_header_padding_top"
                        android:text="@string/dlg_forgot_pass_text_title"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@android:color/white" />

                    <EditText
                        android:id="@+id/ed_dlg_account_forgot_pass_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/menu_list_item_padding_top"
                        android:layout_marginRight="@dimen/menu_list_item_padding_top"
                        android:layout_marginTop="@dimen/menu_list_item_padding_top"
                        android:background="@drawable/bg_dialog_login_textview"
                        android:ems="10"
                        android:hint="@string/dlg_login_email_hint"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/menu_header_padding_top"
                        android:textColor="@android:color/white" >
                    </EditText>

                    <Button
                        android:id="@+id/btn_dlg_account_forgot_pass_send"
                        android:layout_width="@dimen/bt_forgot_pass_size"
                        android:layout_height="@dimen/bt_login_size"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/menu_list_item_padding_top"
                        android:layout_marginTop="@dimen/menu_list_item_padding_top"
                        android:background="@drawable/bg_dialog_login_button"
                        android:paddingLeft="@dimen/menu_list_header_padding_top"
                        android:paddingRight="@dimen/menu_list_header_padding_top"
                        android:text="@string/dlg_forgot_pass_send"
                        android:textColor="@color/menu_list_item_text"
                        android:textSize="@dimen/bt_login_text_size" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </FrameLayout>

    <ImageView
        android:id="@+id/id_bt_close_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:contentDescription="@string/image_contentdescription"
        android:src="@drawable/bt_close_dialog" />

</FrameLayout>